estilos modal y dropdown

--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -171,7 +171,7 @@
                                 <div uk-dropdown="boundary:.tabla-profesor-dropdown; mode: click" id="dropear" style="min-width: 150px">
                                     <ul class="uk-nav uk-dropdown-nav uk-text-left">
                                         <li style="padding-left: 10px">
-                                            <h:link outcome="alumnos" styleClass="uk-text-primary" >
+                                            <h:link outcome="alumnos" styleClass="uk-text-primary uk-text-capitalize" >
                                                 <h:outputText pt:uk-icon="icon: file-edit" styleClass="uk-margin-small-right uk-icon" />
                                                 <f:param name="grupo" value="#{grupo.id}"/>
                                                 <span class="uk-text-middle"><h:outputText value="#{etiqueta['detail']}"/></span>
@@ -179,14 +179,14 @@
                                         </li>
                                         <ui:fragment rendered="${grupo.totalAlumno > 0}">
                                             <li style="padding-left: 10px">
-                                                <h:link outcome="asignar-tarea" styleClass="uk-text-primary">
+                                                <h:link outcome="asignar-tarea" styleClass="uk-text-primary uk-text-capitalize">
                                                     <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/gramatica.svg" alt="gramatica" width="20"/>
                                                     <span class="uk-text-middle"><h:outputText value="#{profesor['assign.activity.title']}"/></span>
                                                     <f:param name="grupo" value="#{grupo.id}"/>
                                                 </h:link>
                                             </li>
                                             <li style="padding-left: 10px">
-                                                <h:link outcome="asignar-tarea" styleClass="uk-text-primary">
+                                                <h:link outcome="asignar-tarea" styleClass="uk-text-primary uk-text-capitalize">
                                                     <h:outputText pt:uk-icon="icon: trash" styleClass="uk-margin-small-right uk-icon" />
                                                     <span class="uk-text-middle"><h:outputText value="delete hw"/></span>
                                                     <f:param name="grupo" value="#{grupo.id}"/>
