--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -75,13 +75,14 @@
                 <h:button styleClass="boton-maestro-base" value="#{boton['back']}" outcome="tablero"/>
                 <h:button styleClass="boton-escuadron-base" value="#{boton['add']}" outcome="agregar-csv"/>
                 <button class="boton-escuadron-base uk-text-uppercase" uk-toggle="target: #modal-password">#{boton['passwords']}</button>
+                <button class="boton-escuadron-base uk-text-uppercase" uk-toggle="target: #modal-eliminar-actividad">delete activity</button>
                 <button class="boton-escuadron-base reporte"
                         disabled="#{empty grupoAlumnoControlador.tareaAlumnoGrupoModeloLista ? 'disabled' : ''}"
                         data-grupo="#{profesorGrupoControlador.grupoModelo.grupo}"
                         data-grado="#{profesorGrupoControlador.grupoModelo.grado}">
                     #{boton['report']}
                 </button>
-<!--                <button uk-toggle="target: #modal-nuevo-alumno" class="boton-escuadron-base">agregar</button>-->
+
             </div>
         </div>
 
