--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -40,6 +40,7 @@
             <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/biblioteca-profesor.css"/>
             <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/scroll-profesor.css"/>
             <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/asignar-actividad.css"/>
+            <h:outputStylesheet library="css" name="modal.css"/>
             <div class="uk-position-relative uk-margin-small-top" id="temario">
                 <div class="uk-position-absolute uk-animation-slide-top-medium">
                     <div class="uk-flex uk-flex-right">
@@ -81,6 +82,7 @@
                     </h:form>
                     <h:button value="#{boton['back']}" styleClass="uk-button uk-margin-small-right boton-escuadron-base" outcome="dashboard"/>
                     <button class="uk-button boton-escuadron-base" onclick="buscaActividadSeleccionada(event)">#{profesor['activity.assign']}</button>
+                    <button class="uk-button boton-escuadron-base" nh-modal="modal-reporte">Report</button>
                 </div>
                 <ul  class="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom uk-child-width-1-3@m" uk-grid="">
                     <ui:repeat value="#{asignarActividadControlador.actividadModeloLista}" var="actividadModelo">
@@ -180,23 +182,20 @@
                 </ul>
 
             </div>
-            <h:panelGroup layout="block" id="modal-transcript" pt:uk-modal="" >
-                <div class="uk-modal-dialog uk-margin-auto-vertical modal-tam " >
-                    <div class="uk-modal-header header-color-card">
-                        <h2 class="uk-modal-title titulo-modal">Reporte</h2>
+            <div class="modal-contenedor" id="modal-reporte">
+                <div class="modal">
+                    <div class="modal-cabecera">
+                        <h3>Titulo</h3>
                     </div>
-                    <div class="barra-modal"></div>
-                    <div class="uk-modal-body  modal-contenedor-transcrip modal">
-                       <h:panelGroup layout="block" id="transcripcion">
-                          <h:outputText value="#{actividadControlador.trasncrip}" escape="false"/>
-                       </h:panelGroup>
+                    <div class="modal-cuerpo">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque magni hic dolores corporis nesciunt harum quae eum reprehenderit. In, accusantium.
                     </div>
-                    <div class="uk-modal-footer uk-text-right">
-                        <button class="boton-escuadron-base-secundary uk-modal-close" type="button">Cancel</button>
-                        <button class="boton-escuadron-base  uk-margin-small-left">Aceptar</button>
+                    <div class="modal-pie">
+                        <button type="button" class="uk-button boton-profesor boton-secundario-profesor cerrar-modal" style="margin-right: 15px;">close</button>
+                        <button type="button" class="uk-button boton-profesor boton-primario-profesor">save</button>
                     </div>
                 </div>
-            </h:panelGroup>
+            </div>
             <script type="text/javascript">
                 let letrero = "#{profesor['you.need.to.select.an.activity']}";
                 let confirmacion = "#{profesor['modal.confirma']}";
@@ -207,6 +206,7 @@
             <script type="text/javascript" src="https://sdk.amazonaws.com/js/aws-sdk-2.585.0.min.js"></script>
             <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/asignar-actividad.js"></script>
             <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/alumno/filtro.js"></script>
+            <h:outputScript library="js" name="modal.js"/>
         </ui:define>
     </ui:composition>
 </html>
