--- a/tecolotl-web/src/main/webapp/alumno/mindmap/3.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/3.xhtml
@@ -81,7 +81,7 @@
                         <h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/pop-art/boton-finished.svg" styleClass="movimiento3 finalizado3" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
                     </h:panelGroup>
                     <div class="dialogo uk-visible@s">
-                        <h3 class=" titulo-mapa-3">#{alumno['mindmap.mindmap.map3.title.description']}</h3>
+                        <h3 class="titulo-mapa-3 primera-mayuscula">#{alumno['mindmap.mindmap.map3.title.description']}</h3>
                         <h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/calendario.svg" styleClass="imagen-calendario uk-margin-small-top"/>
                     </div>
                     <div class="imagen-mapa uk-visible@s">
