--- a/tecolotl-web/src/main/webapp/alumno/mindmap/5.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/5.xhtml
@@ -72,6 +72,7 @@
     </ui:define>
     <ui:define name="contenido">
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/mapa-5.css"/>
+        <h:outputStylesheet library="css" name="letra.css"/>
         <div class="uk-section uk-margin-small-left uk-margin-small-right">
             <div class="uk-container padding-contenedor fondo-mapa-5 uk-position-relative">
                 <h:panelGroup layout="block">
@@ -82,7 +83,7 @@
                     <h3 class="titulo-mapa-5">#{alumno['mindmap.map5.title.compare']}</h3>
                     <div class="contenido-5"></div>
                     <div class="imagen-nube-5 uk-margin-auto-left uk-margin-auto-right">
-                        <h3 class="">#{alumno['map5.title.description.how']}</h3>
+                        <h3 class="primera-mayuscula">#{alumno['map5.title.description.how']}</h3>
                     </div>
                     <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-margin-small-top" pt:uk-grid="" >
                         <div class="nube-5">
