--- a/tecolotl-web/src/main/webapp/alumno/mindmap/5.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/5.xhtml
@@ -71,7 +71,8 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
-        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/mapa-5.css"/>
+<!--        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/mapa-5.css"/>-->
+        <h:outputStylesheet library="css" name="/alumno/mapa-5.css"/>
         <h:outputStylesheet library="css" name="letra.css"/>
         <div class="uk-section uk-margin-small-left uk-margin-small-right">
             <div class="uk-container padding-contenedor fondo-mapa-5 uk-position-relative">
@@ -84,6 +85,15 @@
                     <div class="contenido-5"></div>
                     <div class="imagen-nube-5 uk-margin-auto-left uk-margin-auto-right">
                         <h3 class="primera-mayuscula">#{alumno['map5.title.description.how']}</h3>
+                        <h:inputTextarea styleClass="uk-margin-small-top"
+                                         id="seis"
+                                         disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
+                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
+                                         pt:placeholder="write some text"
+                                         pt:maxlength="160">
+                            <f:validateRequired/>
+                        </h:inputTextarea>
+                        <h:message for="seis" styleClass="mensaje-alerta-5"/>
                     </div>
                     <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-margin-small-top" pt:uk-grid="" >
                         <div class="nube-5">
