Se arreglan los mapas mentales 5 y 9 con los campos de main idea

--- a/tecolotl-web/src/main/webapp/alumno/mindmap/9.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/9.xhtml
@@ -86,7 +86,7 @@
                                      id="detalleIdea"
                                      disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
                                      value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
-                                     pt:placeholder="#{alumno['mindmap.map9.title.main']}"
+                                     pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}"
                                      pt:maxlength="80">
                         <f:validateRequired/>
                     </h:inputTextarea>
