--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -30,6 +30,7 @@
     <ui:define name="contenido">
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/dashboard-profesor.css"/>
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/grafica.css"/>
+        <h:outputStylesheet library="css" name="modal.css"/>
         <div class="uk-margin-large-top"><h1 class="uk-margin-top uk-text-uppercase lescuadron ">#{profesor['dashboard.title']}!</h1></div>
         <div class="uk-grid" uk-grid="">
             <div class="uk-width-1-3@m">
@@ -186,11 +187,11 @@
                                                 </h:link>
                                             </li>
                                             <li style="padding-left: 10px">
-                                                <h:link outcome="asignar-tarea" styleClass="uk-text-primary uk-text-capitalize">
+                                                <h:outputLink value="#" pt:nh-modal="modal-actividades" styleClass="uk-text-primary uk-text-capitalize">
                                                     <h:outputText pt:uk-icon="icon: trash" styleClass="uk-margin-small-right uk-icon" />
                                                     <span class="uk-text-middle"><h:outputText value="delete hw"/></span>
                                                     <f:param name="grupo" value="#{grupo.id}"/>
-                                                </h:link>
+                                                </h:outputLink>
                                             </li>
                                         </ui:fragment>
                                     </ul>
@@ -203,18 +204,56 @@
             <a id="reporte" style="display: none">boton</a>
         </div>
 
-        <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/grafica.js"></script>
+        <div class="modal-contenedor" id="modal-actividades">
+            <div class="modal modal-largo">
+                <div class="modal-cabecera">
+                    <h3>Eliminar Actividad</h3>
+                </div>
+                <div class="modal-cuerpo">
+                    <h:dataTable
+                            id="tabla-actividades"
+                            styleClass="uk-table uk-table-justify uk-table-small uk-table-middle tablaPrimaria uk-table-hover uk-text-center tabla-profesor-dropdown"
+                            headerClass="thPrimario uk-text-center"
+                            columnClasses=",,,uk-width-small"
+                            rowClasses="tdPrimario"
+                            footerClass="thPrimario uk-text-left">
+                        <h:column>
+                            <f:facet name="header"><span class="letra-tabla uk-text-bold">Actividad</span></f:facet>
+                            <h:graphicImage url="https://i.ytimg.com/vi/kWQD1bjj4G8/mqdefault.jpg" />
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header"><span class="letra-tabla uk-text-bold">pregunta</span></f:facet>
+                            pregunta detonadora
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header"><span class="letra-tabla uk-text-bold">opcion</span></f:facet>
+                            <h:outputText styleClass="uk-icon " pt:uk-icon="icon: trash"/>
+                        </h:column>
+                    </h:dataTable>
+                </div>
+                <div class="modal-pie">
+                    <button class="cerrar-modal boton-escuadron-base uk-margin-medium-right">Cerrar</button>
+                    <button class="boton-escuadron-base " onclick="nahModal['modal-actividades'].cerrarModal();">Aceptar</button>
+                </div>
+            </div>
+        </div>
+
+    </ui:define>
+
+    <ui:define name="file-js">
+<!--        <script type="text/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/profesor/grafica.js"></script>-->
+        <h:outputScript library="js" name="/profesor/grafica.js"/>
         <script type="application/javascript">
             document.addEventListener('DOMContentLoaded',() =>{
-               let btnReport = document.querySelector('#boton-reporte');
-               let tablaGrupos = document.querySelectorAll('#formulario-tabla table tbody > tr > td:last-child  ul > li:first-child > a');
-               let idGrupos = [];
-               tablaGrupos.forEach(table =>{
-                  let cadenaUrl = table.href;
-                  idGrupos.push(cadenaUrl.split("=")[1])
-               });
-               let cadenaIdGrupos = idGrupos.join(",");
-               console.log(cadenaIdGrupos);
+                let btnReport = document.querySelector('#boton-reporte');
+                let tablaGrupos = document.querySelectorAll('#formulario-tabla table tbody > tr > td:last-child  ul > li:first-child > a');
+                let idGrupos = [];
+                tablaGrupos.forEach(table =>{
+                    let cadenaUrl = table.href;
+                    idGrupos.push(cadenaUrl.split("=")[1])
+                });
+                let cadenaIdGrupos = idGrupos.join(",");
+                console.log(cadenaIdGrupos);
                 btnReport.addEventListener('click',()=>{
                     UIkit.notification("The document is being downloaded, please wait");
                     var hiddenElemento = document.querySelector('#reporte');
@@ -224,6 +263,7 @@
             });
 
         </script>
+        <h:outputScript library="js" name="modal.js"/>
     </ui:define>
 
 </ui:composition>
