Ahora crea una tarea para un único alumno, faltan las pruebas

--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -9,7 +9,8 @@
 
     <ui:composition template="/template/profesor/dashboard-profesor.xhtml">
         <f:metadata>
-            <f:viewParam name="grupo" value="#{asignarActividadControlador.grupo}" required="true"/>
+            <f:viewParam name="grupo" value="#{asignarActividadControlador.grupo}"/>
+            <f:viewParam name="alumno" value="#{asignarActividadControlador.alumno}"/>
             <f:viewAction action="#{asignarActividadControlador.inicio}"/>
         </f:metadata>
         <ui:define name="menu">
