--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -152,6 +152,14 @@
                                                 <f:param name="idAlumno" value="#{tareaAlumnoGrupoModelo.id}"/>
                                             </h:link>
                                         </li>
+                                        <li>
+                                            <h:link outcome="asignar-tarea">
+                                                <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/gramatica.svg" alt="gramatica" width="20"/>
+                                                <span class="uk-text-middle"><h:outputText value="#{profesor['assign.activity.title']}"/></span>
+                                                <f:param name="alumno" value="#{tareaAlumnoGrupoModelo.id}"/>
+                                                <f:param name="grupo" value="#{grupoAlumnoControlador.idGrupo}"/>
+                                            </h:link>
+                                        </li>
                                     </ul>
                                 </h:panelGroup>
                             </h:column>
