--- a/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
@@ -113,6 +113,11 @@
                                     <h:outputText styleClass="uk-icon" pt:uk-icon="icon: users"/>
                                     <f:param name="escuela" value="#{param['escuela']}"/>
                                 </h:link>
+                                <h:link styleClass="uk-button uk-button-primary btn-estilo" outcome="coordinador">
+                                    <h:outputText value="Coordinadores" styleClass="uk-margin-small-right"/>
+                                    <h:outputText styleClass="uk-icon" pt:uk-icon="icon: users"/>
+                                    <f:param name="escuela" value="#{param['escuela']}"/>
+                                </h:link>
                             </div>
                         </div>
                     </h:panelGroup>
